# deepseek-extractor

./: .gitignore  package-lock.json  package.json
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  i18n.rs  lib.rs  main.rs  models.rs  preview.rs
src-tauri/src/extractor/: learning.rs  markdown.rs  mod.rs  regex_pat.rs
src-tauri/src/packer/: codepack.rs  mod.rs
src-tauri/src/url_extractor/: chatgpt.rs  claude.rs  deepseek.rs  fallback.rs  grok.rs  mod.rs
